Fixed layout issues of Dashboard in master

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,11 @@ button {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
+
+.circle-crop {
+  border-radius: 50%;
+  background-position: center center;
+  background-size: cover;
+  width: 200px;
+  height: 200px;
+}
